--- a/delice/index.html
+++ b/delice/index.html
@@ -27,13 +27,13 @@
       <main>
         <section class="hero__img">
           <img
-            src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
             alt="hero"
             class="hero__img" />
         </section>
         <section class="restaurants">
           <div class="restaurants__card__title ">
-            <h1>La palette du goût</h1>
+            <h1>Le délice des sens</h1>
             <div class="heart-container">
             <i class="fa-regular fa-heart heart-empty "></i>
             <i class="fa-solid fa-heart heart-full "></i>
@@ -44,28 +44,30 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Fricassé d'escargots</h3>
-                <p>Au piment d'espelette</p>
-                </div>
-                <p class="img__price">25€</p>
-                <i class="fa-solid fa-circle-check meal__check"></i>
-              </div>
-              <div class="meal">
-                <div class="meal__content">
-                <h3>Foie gras de canard mi-cuit
-                  </h3>
-                <p>Et ses copeaux de truffe noire</p>
-                </div>
-                <p class="img__price">25€</p>
-                <i class="fa-solid fa-circle-check meal__check"></i>
-              </div>
-              <div class="meal">
-                <div class="meal__content">
-                <h3>Œuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar
+                <h3>Tartare de thon</h3>
+                <p>Assaisonné au yuzu
                 </p>
                 </div>
                 <p class="img__price">25€</p>
+                <i class="fa-solid fa-circle-check meal__check"></i>
+              </div>
+              <div class="meal">
+                <div class="meal__content">
+                <h3>Bouchée de homard croustillant
+                  </h3>
+                <p>Et sa farandole de petits légumes
+                </p>
+                </div>
+                <p class="img__price">35€</p>
+                <i class="fa-solid fa-circle-check meal__check"></i>
+              </div>
+              <div class="meal">
+                <div class="meal__content">
+                <h3>Velouté de cèpes 
+                </h3>
+                <p>Aux truffes</p>
+                </div>
+                <p class="img__price">20€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
             </div>  
@@ -75,31 +77,31 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Filet de bœuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes
+                <h3>Poulet rôti aux herbes de Provence 
+                </h3>
+                <p>Et sa crème de truffe
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">40€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Parmentier de queue de bœuf
+                <h3>Langouste rôtie 
                 </h3>
-                <p>À la truffe noire sur sa purée de panais
+                <p>Et ses légumes de saison
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">35€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Filet de turbot
+                <h3>Côte de bœuf Angus 
                 </h3>
-                <p>Aux agrumes
-                </p>
+                <p>Et sa purée de panais</p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">44€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
             </div>  
@@ -109,30 +111,31 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Paris-Brest
+                <h3>Farandole de desserts
                 </h3>
-                <p>Revisité</p>
+                <p>Du chef</p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">18€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar
+                <h3>Crème brulée 
+                </h3>
+                <p>Revisitée
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">22€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Mousse au chocolat 
+                <h3>Tiramisu
                 </h3>
-                <p>Au piment d'Espelette et à la truffe noire
+                <p>À la noisette
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">23€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
             <div class="restaurants__button__container">
