--- a/francaise/index.html
+++ b/francaise/index.html
@@ -27,13 +27,13 @@
       <main>
         <section class="hero__img">
           <img
-            src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
             alt="hero"
             class="hero__img" />
         </section>
         <section class="restaurants">
           <div class="restaurants__card__title ">
-            <h1>La palette du goût</h1>
+            <h1>A la française</h1>
             <div class="heart-container">
             <i class="fa-regular fa-heart heart-empty "></i>
             <i class="fa-solid fa-heart heart-full "></i>
@@ -44,28 +44,32 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Fricassé d'escargots</h3>
-                <p>Au piment d'espelette</p>
-                </div>
-                <p class="img__price">25€</p>
-                <i class="fa-solid fa-circle-check meal__check"></i>
-              </div>
-              <div class="meal">
-                <div class="meal__content">
-                <h3>Foie gras de canard mi-cuit
-                  </h3>
-                <p>Et ses copeaux de truffe noire</p>
-                </div>
-                <p class="img__price">25€</p>
-                <i class="fa-solid fa-circle-check meal__check"></i>
-              </div>
-              <div class="meal">
-                <div class="meal__content">
-                <h3>Œuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar
+                <h3>Tartare de poulpe acidulé
+                </h3>
+                <p>Aux zestes d'orange
                 </p>
                 </div>
                 <p class="img__price">25€</p>
+                <i class="fa-solid fa-circle-check meal__check"></i>
+              </div>
+              <div class="meal">
+                <div class="meal__content">
+                <h3>Velouté de légumes d'antan
+                  </h3>
+                <p>Carotte, panais, topinambour
+                </p>
+                </div>
+                <p class="img__price">35€</p>
+                <i class="fa-solid fa-circle-check meal__check"></i>
+              </div>
+              <div class="meal">
+                <div class="meal__content">
+                <h3>Soupe à l'oignon
+                </h3>
+                <p>Revisitée
+                </p>
+                </div>
+                <p class="img__price">20€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
             </div>  
@@ -75,31 +79,34 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Filet de bœuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes
+                <h3>Coquilles Saint-Jacques
+                </h3>
+                <p>Accompagnées d'une purée de panais
+
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">40€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Parmentier de queue de bœuf
+                <h3>Magret de canard
                 </h3>
-                <p>À la truffe noire sur sa purée de panais
+                <p>Et parmentier de pommes de terre
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">35€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Filet de turbot
+                <h3>Pigeonneau d’Ille-et-Vilaine
+
                 </h3>
-                <p>Aux agrumes
+                <p>Sur son lit de gnocchis aux légumes
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">44€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
             </div>  
@@ -109,30 +116,32 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Paris-Brest
+                <h3>Pétales de violettes glacés
                 </h3>
-                <p>Revisité</p>
+                <p>Et purée de noisettes
+                </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">18€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar
+                <h3>Fondant au chocolat
+                </h3>
+                <p>Revisité
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">23€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Mousse au chocolat 
+                <h3>Millefeuille croustillant
                 </h3>
-                <p>Au piment d'Espelette et à la truffe noire
+                <p>Myrtilles et pâte d’amande
                 </p>
                 </div>
-                <p class="img__price">25€</p>
+                <p class="img__price">23€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
             <div class="restaurants__button__container">
