--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     ></script>
   </head>
   <body>
+    <div class="showbox">
+      <div class="loader">
+        <svg class="circular" viewBox="25 25 50 50">
+          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+        </svg>
+      </div>
+    </div>
     <div class="main-container">
       <header>
         <div class="header__logo">
@@ -81,7 +88,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="restaurants__card">
+            <a href="note" class="restaurants__card">
               <div class="card">
                 <img
                   src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -101,7 +108,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="restaurants__card">
+            <a href="francaise" class="restaurants__card">
               <div class="card">
                 <img
                   src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -110,7 +117,7 @@
                 />
                 <div class="card-content1">
                   <div class="card-content">
-                    <h3 class="restaurants__card__title">La note enchantée</h3>
+                    <h3 class="restaurants__card__title">A la française</h3>
                     <p class="restaurants__card__txt">Folie-Méricourt</p>
                   </div>
                   <div class="heart-container">
@@ -120,7 +127,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="restaurants__card">
+            <a href="delice" class="restaurants__card">
               <div class="card">
                 <img
                   src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -129,8 +136,8 @@
                 />
                 <div class="card-content1">
                   <div class="card-content">
-                    <h3 class="restaurants__card__title">La note enchantée</h3>
-                    <p class="restaurants__card__txt">Le délice des sens</p>
+                    <h3 class="restaurants__card__title">Le délice des sens</h3>
+                    <p class="restaurants__card__txt">Folie-Méricourt</p>
                   </div>
                   <div class="heart-container">
                     <i class="fa-regular fa-heart heart-empty"></i>
