--- a/note/index.html
+++ b/note/index.html
@@ -33,7 +33,7 @@
         </section>
         <section class="restaurants">
           <div class="restaurants__card__title ">
-            <h1>La palette du goût</h1>
+            <h1>La note enchantée</h1>
             <div class="heart-container">
             <i class="fa-regular fa-heart heart-empty "></i>
             <i class="fa-solid fa-heart heart-full "></i>
@@ -44,25 +44,39 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Fricassé d'escargots</h3>
-                <p>Au piment d'espelette</p>
+                <h3>Ravioles de foie gras</h3>
+                <p>Accompagnées de leur crème à la truffe
+                </p>
                 </div>
                 <p class="img__price">25€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Foie gras de canard mi-cuit
+                <h3>Caviar osciètre
                   </h3>
-                <p>Et ses copeaux de truffe noire</p>
+                <p>Sur blini à la farine de blé noir</p>
                 </div>
                 <p class="img__price">25€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Œuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar
+                <h3>Homard et espuma de potiron
+                </h3>
+                <p>Marinés aux zestes d'orange
+                </p>
+                </div>
+                <p class="img__price">25€</p>
+                <i class="fa-solid fa-circle-check meal__check"></i>
+              </div>
+              <div class="meal">
+                <div class="meal__content">
+                <h3>Foie gras de canard cuit entier
+
+                </h3>
+                <p>Confiture de figue et pain toasté
+
                 </p>
                 </div>
                 <p class="img__price">25€</p>
@@ -75,8 +89,9 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Filet de bœuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes
+                <h3>Noix de coquilles Saint-Jacques
+                </h3>
+                <p>Sur lit de purée de céleri-rave
                 </p>
                 </div>
                 <p class="img__price">25€</p>
@@ -84,9 +99,9 @@
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Parmentier de queue de bœuf
+                <h3>Langoustine poêlée
                 </h3>
-                <p>À la truffe noire sur sa purée de panais
+                <p>Purée de patate douce
                 </p>
                 </div>
                 <p class="img__price">25€</p>
@@ -94,9 +109,9 @@
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Filet de turbot
+                <h3>Mijoté de queue de bœuf 
                 </h3>
-                <p>Aux agrumes
+                <p>Et riz sauvage aux zestes de citron
                 </p>
                 </div>
                 <p class="img__price">25€</p>
@@ -109,17 +124,9 @@
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div class="meal__content">
-                <h3>Paris-Brest
+                <h3>Macaron noisette et chocolat
                 </h3>
-                <p>Revisité</p>
-                </div>
-                <p class="img__price">25€</p>
-                <i class="fa-solid fa-circle-check meal__check"></i>
-              </div>
-              <div class="meal">
-                <div class="meal__content">
-                <h3>Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar
+                <p>Glace au caramel brun et sel de Guérande
                 </p>
                 </div>
                 <p class="img__price">25€</p>
@@ -127,9 +134,19 @@
               </div>
               <div class="meal">
                 <div class="meal__content">
-                <h3>Mousse au chocolat 
+                <h3>Baba au rhum revisité 
                 </h3>
-                <p>Au piment d'Espelette et à la truffe noire
+                <p>Avec son coulis de citron
+                </p>
+                </div>
+                <p class="img__price">25€</p>
+                <i class="fa-solid fa-circle-check meal__check"></i>
+              </div>
+              <div class="meal">
+                <div class="meal__content">
+                <h3>Tarte au citron meringuée 
+                </h3>
+                <p>Déstructurée
                 </p>
                 </div>
                 <p class="img__price">25€</p>
